2008-03-30  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_dialog_init): use
	G_DEFINE_TYPE instead of open-coding get_type

2008-03-28  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_job_destroy),
	(file_transfer_dialog_overwrite), (file_transfer_job_schedule): keep
	the overwrite confirmation around for an entire job, so we don't reset
	the window position all the time

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_dialog_set_prop),
	(file_transfer_dialog_get_prop), (file_transfer_dialog_init),
	(file_transfer_job_update), (file_transfer_job_progress),
	(file_transfer_dialog_overwrite), (file_transfer_job_schedule),
	(file_transfer_dialog_copy_async):
	* file-transfer-dialog.h: add support for file overwrite confirmation

2008-03-11  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-apply.c: (gnome_meta_theme_set): actually check the
	cursor size before changing it in GConf, not the theme name
	(thanks to Kjartan Maraas)

2008-03-11  Jens Granseuer  <jensgr@gmx.net>

	Encountering a theme that could not be thumbnailed (e.g. because the
	metacity theme for a metatheme isn't installed) would make the
	thumbnailer crash. Since it's not restarted by the appearance capplet
	this would result in all themes encountered after the broken one not
	to be thumbnailed either. This change fixes up error handling in the
	thumbnailer so that the broken theme is simply skipped and processing
	can continue with the next one. (bug #521009)

	* theme-thumbnail.c: (create_meta_theme_pixbuf),
	(create_metacity_theme_pixbuf), (message_from_capplet),
	(message_from_child), (read_pixbuf),
	(generate_theme_thumbnail_async), (theme_thumbnail_factory_init):
	properly handle failed thumbnailing attempts

2008-03-11  Jens Granseuer  <jensgr@gmx.net>

	* gconf-property-editor.c: (peditor_numeric_range_widget_changed): don't
	free the GConf value if we don't have one. Fixes a crash when schemas