@@ -21,5 +21,5 @@
 
 void gtkrc_get_details (gchar *filename, GSList **engines, GSList **symbolic_colors);
 gchar * gtkrc_find_named (const gchar *name);
-gchar * gtkrc_get_color_scheme (gchar *filename);
+gchar * gtkrc_get_color_scheme (const gchar *filename);
 gchar * gtkrc_get_color_scheme_for_theme (const gchar *theme_name);
